# strava-gears

./: .env.example  README.md  pyproject.toml
src/strava_gears/cli/: activities.py  assign.py  main.py
src/strava_gears/core/: __init__.py  auth.py  client.py  config.py  heuristics.py
strava_gears/core/: client.py  config.py  heuristics.py
