[project]
name = "strava-gears"
version = "0.1.0"
description = "Automate setting the used bike/shoe of a given activity based on heuristics"
requires-python = ">=3.12"
dependencies = [
    "stravalib>=2.0",
    "click>=8.1",
    "python-dotenv>=1.0",
]

[project.scripts]
strava-gears = "strava_gears.cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/strava_gears"]
